# thumperd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: example_list  example_plugin.c
src/: answer.c  main.c
src/inc/: answer.h  pages.h
src/thumper_engine/: stack.c  thumper.c
src/thumper_engine/inc/: stack.h  thumper.h  thumper_plugin_def.h
